--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
+
+body{
+    padding-top: 70px;
+    background: url(4.jpg) no-repeat  ;
+    background-size: cover;
+   filter:
+    
+}
+
+.jumbotron {
+    color: #0540af;
+    background: #ddddbf;
+}
+
+
 .img-fluid {
     max-width: 100%;
     height: auto;
+    margin: 0.1em;
+}
+
+ #navbg{
+    background: #5e85ce;
+    opacity: .9;
+   
+}
+ul>li>a {
+    color: white !important;
 }
